--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and Release (.app for macOS)
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - 'v*'
 
 jobs:
-  build-macos:
-    name: Build macOS
+  build-macos-app:
+    name: Build macOS .app
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,18 +22,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Build app
+      - name: Build .app using PyInstaller
         run: |
-          pyinstaller --onefile --windowed \
+          pyinstaller \
+            --windowed \
+            --icon=assets/fpa_icon.icns \
             --add-data "UI/fpa_data_coll_exe.ui:UI" \
             --add-data "assets/football_field.png:assets" \
             --add-data "assets/logo.png:assets" \
             --add-data "assets/statguide.png:assets" \
-            --add-data "assets/fpa_icon.icns:assets" \
             main.py
 
-      - name: Upload macOS artifact
+      - name: Upload macOS .app
         uses: actions/upload-artifact@v4
         with:
           name: macOS-app
-          path: dist/main
+          path: dist/main.app
