--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,35 @@ jobs:
         with:
           name: macOS-app-zip
           path: dist/main.app.zip
+
+  build-windows:
+    name: Build Windows .exe
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pyinstaller
+
+      - name: Build .exe using PyInstaller
+        run: |
+          pyinstaller --noconfirm --onefile --windowed ^
+            --add-data "UI\\fpa_data_coll_exe.ui;UI" ^
+            --add-data "assets\\football_field.png;assets" ^
+            --add-data "assets\\logo.png;assets" ^
+            --add-data "assets\\statguide.png;assets" ^
+            main.py
+
+      - name: Upload Windows .exe
+        uses: actions/upload-artifact@v4
+        with:
+          name: Windows-exe
+          path: dist/main.exe
