--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
@@ -22,19 +22,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
-          pip install -r requirements.txt
 
       - name: Build .exe using PyInstaller
         run: |
-          pyinstaller --noconfirm --onefile --windowed ^
-          --add-data "UI/fpa_data_coll_exe.ui;UI" ^
-          --add-data "assets/football_field.png;assets" ^
-          --add-data "assets/logo.png;assets" ^
-          --add-data "assets/statguide.png;assets" ^
-          main.py
+          pyinstaller --noconfirm --onefile --windowed --add-data "UI/fpa_data_coll_exe.ui;UI" --add-data "assets/football_field.png;assets" --add-data "assets/logo.png;assets" --add-data "assets/statguide.png;assets" main.py
 
-      - name: Upload Windows .exe
+      - name: Upload .exe artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-exe
-          path: dist/*.exe
+          name: fpa-windows-exe
+          path: dist/main.exe
