--- a/.github/workflows/buil-macos.yml
+++ b/.github/workflows/buil-macos.yml
@@ -26,11 +26,11 @@ jobs:
 
       - name: Build .app using PyInstaller
         run: |
-          pyinstaller --noconfirm --windowed ^
-          --add-data "UI/fpa_data_coll_exe.ui:UI" ^
-          --add-data "assets/football_field.png:assets" ^
-          --add-data "assets/logo.png:assets" ^
-          --add-data "assets/statguide.png:assets" ^
+          pyinstaller --noconfirm --windowed \
+          --add-data "UI/fpa_data_coll_exe.ui:UI" \
+          --add-data "assets/football_field.png:assets" \
+          --add-data "assets/logo.png:assets" \
+          --add-data "assets/statguide.png:assets" \
           main.py
 
       - name: Upload macOS .app
