--- a/.github/workflows/buil-macos.yml
+++ b/.github/workflows/buil-macos.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build .app using PyInstaller
         run: |
           pyinstaller --noconfirm --windowed \
-          --icon=assets/fpa_icon.icns \
+          --icon=assets/icon.icns \
           --add-data "UI/fpa_data_coll_exe.ui:UI" \
           --add-data "assets/football_field.png:assets" \
           --add-data "assets/logo.png:assets" \
