--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,11 +21,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pyinstaller
 
       - name: Build .exe using PyInstaller
         run: |
-          pyinstaller --noconfirm --onefile --windowed --add-data "UI/fpa_data_coll_exe.ui;UI" --add-data "assets/football_field.png;assets" --add-data "assets/logo.png;assets" --add-data "assets/statguide.png;assets" main.py
+          pyinstaller --noconfirm --onefile --windowed --collect-all pandas --collect-all PyQt5 --hidden-import openpyxl --add-data "UI/fpa_data_coll_exe.ui;UI" --add-data "assets/football_field.png;assets" --add-data "assets/logo.png;assets" --add-data "assets/statguide.png;assets" main.py
 
       - name: Upload .exe artifact
         uses: actions/upload-artifact@v4
