--- a/.github/workflows/buil-macos.yml
+++ b/.github/workflows/buil-macos.yml
@@ -26,12 +26,17 @@ jobs:
 
       - name: Build .app using PyInstaller
         run: |
-          pyinstaller --noconfirm --windowed \
-          --icon=assets/icon.icns \
-          --add-data "UI/fpa_data_coll_exe.ui:UI" \
-          --add-data "assets/football_field.png:assets" \
-          --add-data "assets/logo.png:assets" \
-          --add-data "assets/statguide.png:assets" \
+          pyinstaller main.py \
+            --noconfirm \
+            --windowed \
+            --name "FPA" \
+            --icon "assets/fpa_icon.icns" \
+            --target-arch arm64 \
+            --target-arch x86_64 \
+            --add-data "UI/fpa_data_coll_exe.ui:UI" \
+            --add-data "assets/football_field.png:assets" \
+            --add-data "assets/logo.png:assets" \
+            --add-data "assets/statguide.png:assets"
           main.py
 
       - name: Upload macOS .app
